--- a/maina_arm.html
+++ b/maina_arm.html
@@ -38,9 +38,9 @@
                 Այս օրը  կդառնա նրանց համատեղ ճանապարհի սկիզբը` 
                 լի սիրով, հոգատարությամբ և  երջանկությամբ:
                 <br><br>
-                Մենք վստահ ենք, որ ձեր ներկայությունն այս հրաշալի իրադարձության մթնոլորտն է'լ ավելի կջերմացնի ու կհարստացնի նոր գույներով: Եվ մենք ուրախ կլինենք մեր զավակների կյանքի կարևորագույն օրը կիսել հե'նց ձեզ հետ: 
+                Մենք վստահ ենք, որ ձեր ներկայությունը այս հրաշալի իրադարձության մթնոլորտն է'լ ավելի կջերմացնի ու կհարստացնի նոր գույներով: Եվ մենք ուրախ կլինենք մեր զավակների կյանքի կարևորագույն օրը կիսել հե'նց ձեզ հետ: 
                 <br><br>
-                Սիրով կսպսենք ձեզ:
+                Սիրով կսպասենք ձեզ:
             </p>
             <div class="date">
                 <p class="maintext">
