--- a/mainm_arm.html
+++ b/mainm_arm.html
@@ -40,7 +40,7 @@
                 <br><br>
                 Մենք վստահ ենք, որ ձեր ներկայությունը այս հրաշալի իրադարձության մթնոլորտն է'լ ավելի կջերմացնի ու կհարստացնի նոր գույներով: Եվ մենք ուրախ կլինենք մեր զավակների կյանքի կարևորագույն օրը կիսել հե'նց ձեզ հետ: 
                 <br><br>
-                Սիրով կսպսենք ձեզ:
+                Սիրով կսպասենք ձեզ:
             </p>
             <div class="date">
                 <p class="maintext">
