--- a/maina_arm.html
+++ b/maina_arm.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div id="main">
-            <p class="headtitle">Սիրելի ընկերներ և հարազատներ:</p>
+            <p class="headtitle">Սիրելի հարազատներ և ընկերներ:</p>
             <p class="maintext">
                 Մեծ սիրով և հաճույքով հրավիրում ենք ձեզ մեր զավակների հարսանյաց հանդեսին:
                 Այս օրը  կդառնա նրանց համատեղ ճանապարհի սկիզբը` 
@@ -78,7 +78,7 @@
                                     <td>4</td>
                                     <td>5</td>
                                     <td>6</td>
-                                    <td style="color:#E02E2E">7</td> <!-- 7 августа выделено красным -->
+                                    <td style="color:#E02E2E; background-image: url(/redcircle.svg); background-position: 100% 100%; background-repeat: no-repeat;">7</td> <!-- 7 августа выделено красным -->
                                     <td>8</td>
                                     <td>9</td>
                                     <td>10</td>
@@ -143,6 +143,8 @@
             <div class="buttonpad">
                 <a href="https://yandex.ru/profile/222913353582/"  target="_blank"><button id="map">Ցույց տալ քարտեզում</button></a>
             </div>
+            <br>
+            <p class="maintext">Հաստատեք ձեր ներկայությունը՝ լրացնելով հրավիրատոմսը</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5-LS2k80LiELnAu3tICe8GGw1VphK6dPvU2dCEY08qHvROg/viewform?usp=header" target="_blank">
                 <button id="form">Լրացնել հարցաթերթիկը</button>
             </a>
