--- a/maina_rus.html
+++ b/maina_rus.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div id="main">
-            <p class="headtitle">Дорогие друзья и родные!</p>
+            <p class="headtitle">Дорогие родные и друзья!</p>
             <p class="maintext">
                 С большим удовольствием и радостью приглашаем вас на свадьбу наших детей! Этот день станет началом их совместного пути, полным любви, поддержки и счастья.
                 <br><br>
@@ -76,7 +76,7 @@
                                     <td>4</td>
                                     <td>5</td>
                                     <td>6</td>
-                                    <td style="color:#E02E2E">7</td> <!-- 7 августа выделено красным -->
+                                    <td style="color:#E02E2E; background-image: url(/redcircle.svg); background-position: 100% 100%; background-repeat: no-repeat;">7</td> <!-- 7 августа выделено красным -->
                                     <td>8</td>
                                     <td>9</td>
                                     <td>10</td>
@@ -141,6 +141,8 @@
             <div class="buttonpad">
                 <a href="https://yandex.ru/profile/222913353582/"  target="_blank"><button id="map">Показать на карте</button></a>
             </div>
+            <br>
+            <p class="maintext">Подтвердите свое присутствие, заполнив анкету</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5-LS2k80LiELnAu3tICe8GGw1VphK6dPvU2dCEY08qHvROg/viewform?usp=header" target="_blank">
                 <button id="form">Заполнить анкету</button>
             </a>
