--- a/maina_rus.html
+++ b/maina_rus.html
@@ -137,10 +137,29 @@
             </div>
         </div>
         <div class="buttons">
-            <p class="maintext">Ждем вас в Ресторанном комплексе "Морена" по адресу ул. Мхитара Гераци, 7/8, Масис</p>
+            <div class="invitation">
+                <img src="rings.svg" alt="" width="70px">
+                <div style="margin-left:20px">
+                    <p class="maintext" id="eventshead">15:00</p>
+                    <p class="maintext" style="text-align: left;">Ждем Вас в Церкви Святой Рипсиме</p>
+                </div>
+            </div>
+            <div class="buttonpad">
+                <a href="https://yandex.ru/profile/35208500744/"  target="_blank"><button id="map">Показать на карте</button></a>
+            </div>
+            <br>
+            <br>
+            <div class="invitation">
+                <img src="dish.svg" alt="" width="70px" style="object-fit: contain;">
+                <div style="margin-left:20px">
+                    <p class="maintext" id="eventshead">17:00</p>
+                    <p class="maintext" style="text-align: left;">Ждем Вас в Ресторанном комплексе "Морена" по адресу ул. Мхитара Гераци, 7/8, Масис</p>
+                </div>
+            </div>
             <div class="buttonpad">
                 <a href="https://yandex.ru/profile/222913353582/"  target="_blank"><button id="map">Показать на карте</button></a>
             </div>
+            <br>
             <br>
             <p class="maintext">Подтвердите свое присутствие, заполнив анкету</p>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSc5-LS2k80LiELnAu3tICe8GGw1VphK6dPvU2dCEY08qHvROg/viewform?usp=header" target="_blank">
