--- a/mainm_arm.html
+++ b/mainm_arm.html
@@ -139,7 +139,25 @@
             </div>
         </div>
         <div class="buttons">
-            <p class="maintext">Սպասում ենք Ձեզ «Մորենա» ռեստորանային համալիրում՝ Մխիթար Հերացու 7/8 հասցեում, Մասիս:</p>
+            <div class="invitation">
+                <img src="rings.svg" alt="" width="70px">
+                <div style="margin-left:20px">
+                    <p class="maintext" id="eventshead">15:00</p>
+                    <p class="maintext" style="text-align: left;">Սպասում ենք Ձեզ Սուրբ Հռիփսիմե եկեղեցում</p>
+                </div>
+            </div>
+            <div class="buttonpad">
+                <a href="https://yandex.ru/profile/35208500744/"  target="_blank"><button id="map">Ցույց տալ քարտեզում</button></a>
+            </div>
+            <br>
+            <br>
+            <div class="invitation">
+                <img src="dish.svg" alt="" width="70px" style="object-fit: contain;">
+                <div style="margin-left:20px">
+                    <p class="maintext" id="eventshead">17:00</p>
+                    <p class="maintext" style="text-align: left;">Սպասում ենք Ձեզ ժամը 5֊ին «Մորենա» ռեստորանային համալիրում՝ Մխիթար Հերացու 7/8 հասցեում, Մասիս:</p>
+                </div>
+            </div>
             <div class="buttonpad">
                 <a href="https://yandex.ru/profile/222913353582/"  target="_blank"><button id="map">Ցույց տալ քարտեզում</button></a>
             </div>
