--- a/maina_arm.html
+++ b/maina_arm.html
@@ -143,7 +143,7 @@
                 <img src="rings.svg" alt="" width="70px">
                 <div style="margin-left:20px">
                     <p class="maintext" id="eventshead">15:00</p>
-                    <p class="maintext" style="text-align: left;">Սպասում ենք Ձեզ Սուրբ Հռիփսիմե եկեղեցում</p>
+                    <p class="maintext" style="text-align: left;">Պսակադրությունը կկայանա Սուրբ Հռիփսիմե եկեղեցում</p>
                 </div>
             </div>
             <div class="buttonpad">
