--- a/mainm_rus.html
+++ b/mainm_rus.html
@@ -141,7 +141,7 @@
                 <img src="rings.svg" alt="" width="70px">
                 <div style="margin-left:20px">
                     <p class="maintext" id="eventshead">15:00</p>
-                    <p class="maintext" style="text-align: left;">Ждем Вас в Церкви Святой Рипсиме</p>
+                    <p class="maintext" style="text-align: left;">Венчание состоится в Церкви Святой Рипсиме</p>
                 </div>
             </div>
             <div class="buttonpad">
