--- a/maina_arm.html
+++ b/maina_arm.html
@@ -34,7 +34,7 @@
         <div id="main">
             <p class="headtitle">Սիրելի հարազատներ և ընկերներ:</p>
             <p class="maintext">
-                Մեծ սիրով և հաճույքով հրավիրում ենք ձեզ մեր զավակների հարսանյաց հանդեսին:
+                Մեծ սիրով հրավիրում ենք ձեզ մեր զավակների հարսանյաց հանդեսին:
                 Այս օրը  կդառնա նրանց համատեղ ճանապարհի սկիզբը` 
                 լի սիրով, հոգատարությամբ և  երջանկությամբ:
                 <br><br>
@@ -155,7 +155,7 @@
                 <img src="dish.svg" alt="" width="70px" style="object-fit: contain;">
                 <div style="margin-left:20px">
                     <p class="maintext" id="eventshead">17:00</p>
-                    <p class="maintext" style="text-align: left;">Սպասում ենք Ձեզ ժամը 5֊ին «Մորենա» ռեստորանային համալիրում՝ Մխիթար Հերացու 7/8 հասցեում, Մասիս:</p>
+                    <p class="maintext" style="text-align: left;">Սպասում ենք Ձեզ «Մորենա» ռեստորանային համալիրում՝ Մխիթար Հերացու 7/8 հասցեում, Մասիս:</p>
                 </div>
             </div>
             <div class="buttonpad">
